# nexus-forge

./: .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  MCP_SETUP.md  Makefile  PHASE5_6_IMPLEMENTATION_SUMMARY.md  PHASE7_COMPLETION_REPORT.md  QUALITY_CHECK_REPORT.md  README.md  pyproject.toml  pytest.ini  test_results.txt
.claude/: config.json
assets/demo/: multi_agent_showcase.py  quickstart.sh
config/: production.yml
config/docker/: Dockerfile.frontend
configs/deployment/: docker-compose.production.yml
configs/development/: nexus_forge_simple_validation.json  pytest.ini
demo/: multi_agent_showcase.py
deprecated/: README.md
deprecated/parallax_pal/orchestrator/: __init__.py
deprecated/parallax_pal/tools/: code_exec_tool.py
deprecated/parallax_pal/ui/: ui_agent.py
docs/: FINAL_HACKATHON_SCAN_REPORT.md  GOOGLE_ADK_HACKATHON_VICTORY_ROADMAP.md  MIGRATION.md  PROJECT_STATUS.md  api-reference.md  architecture.md  demo-script.md  deployment-guide.md  enterprise-features-summary.md  mcp-integration-spec.md  production-checklist.md  testing-assessment-report.md  updated-sparc-workflow.md
docs/architecture/: ADK_AGENT2AGENT_PROTOCOL_COMPLETE.md  ARCHITECTURE_SUMMARY.md  adk-marketplace-integration-spec.md  adk-native-multi-agent-architecture.md  agent2agent-integration-example.md  agent2agent-protocol-implementation.md  architecture-diagrams.md  comprehensive-adk-architecture.md  hackathon-winning-differentiators.md  implementation-roadmap.md  marketplace-mcp-implementation.md  missing-features-architecture.md  resource-optimization-summary.md  swarm-intelligence-architecture.md  swarm-intelligence-implementation-summary.md  visual-workflow-architecture.md  visual-workflow-ui-design.md
docs/demos/: DEMO_MATERIALS_SUMMARY.md  GOOGLE_ADK_HACKATHON_DEMO_SCRIPT.md  LIVE_DEMO_SCENARIOS.md  PERFORMANCE_METRICS_SHOWCASE.md  VISUAL_ELEMENTS_ARCHITECTURE.md
docs/performance/: PERFORMANCE_OPTIMIZATION_SUMMARY.md
docs/project/: CLAUDE_CODE.md  DEPLOYMENT_GUIDE.md  HACKATHON_READY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE4_IMPLEMENTATION_SUMMARY.md  README.md  SPARC_PROJECT_COMPLETION_REPORT.md  VALIDATION_REPORT.md  nexus-forge-research-report.md
docs/pseudocode/: missing-features-algorithms.md
docs/research/: ADK_Hackathon_Key_Findings.md  Google_ADK_Hackathon_2025_Research_Report.md
docs/specifications/: missing-features-spec.md
frontend/: package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/components/: ProjectBuilder.tsx  TaskProgressTracker.tsx
frontend/src/contexts/: AuthContext.tsx
infrastructure/cloudformation/: nexus-forge-stack.yaml
infrastructure/terraform/: main.tf
logs/: optimization_log.txt
memory/backups/: backup-2025-06-20T13-58-52-034Z.json  backup-2025-06-20T14-07-12-287Z.json  backup-2025-06-20T18-47-07-248Z.json  backup-2025-06-20T18-49-03-683Z.json
memory/data/: entries.json  nexus_forge_adk_analysis_report.json  nexus_forge_adk_architecture_complete.json  nexus_forge_analysis_summary.md  sparc_session_analysis.json
memory/visual-workflow/: architecture-design.json  complete-implementation-summary.json  serialization-format.json  ui-design.json  workflow-editor-implementation.json
nexus_forge/: __init__.py  config.py  database.py  main.py  models.py
nexus_forge/agents/: __init__.py
nexus_forge/ai_features/: __init__.py  custom_training.py  models.py  predictive_coordination.py  quality_control.py
nexus_forge/core/: __init__.py  cache.py  cache_optimizer.py  caching_decorators.py  error_handling.py  exceptions.py  google_cloud_auth.py  load_balancer.py  monitoring.py  performance_monitor.py  performance_optimizer.py  security_manager.py
nexus_forge/deployment/: production_deployer.py
nexus_forge/features/: __init__.py  advanced_caching.py  agent_behavior_analysis.py  agent_self_improvement.py  dynamic_model_selection.py  multi_modal_integration.py  performance_analytics.py
nexus_forge/integrations/: imagen_integration.py  veo_integration.py
nexus_forge/marketplace/: __init__.py  models.py  performance_benchmarker.py  registry.py  search_engine.py  security_scanner.py
nexus_forge/multi_region/: __init__.py  data_sync.py  edge_optimizer.py  load_balancer.py  models.py  region_manager.py
nexus_forge/multi_tenancy/: __init__.py  isolation_manager.py  middleware.py  models.py  tenant_manager.py
nexus_forge/services/: adk_service.py  auth.py  email.py  google_ai_service.py
nexus_forge/websockets/: __init__.py  manager.py
nexus_forge/workflow_builder/: __init__.py  compiler.py  engine.py  executor.py  models.py
reports/: swarm-development-hierarchical-1750392742375.json  swarm-optimization-mesh-1750425850222.json
scripts/: deploy_cloud_run.sh  deploy_final.sh  deploy_monitoring.sh  deploy_production.sh  final_validation.py  setup_gcp_resources.sh  simple_validation.py  validate_deployment.sh
src/: __init__.py
src/backend/: __init__.py  config.py  database.py  main.py  models.py
src/frontend/: .env.example  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  cypress.config.ts  nginx.conf  package-lock.json  package.json
tests/: __init__.py  conftest.py  pytest.ini  test_adk_integration.py  test_agent2agent_protocol.py  test_ai_integrations.py  test_config.py  test_end_to_end_workflows.py  test_mcp_integrations.py  test_nexus_forge_router.py  test_performance_benchmarks.py  test_security.py  test_starri_orchestrator.py  test_starri_orchestrator_enhanced.py  test_websocket.py
tests/advanced_systems/: test_advanced_systems_integration.py  test_agent_self_improvement.py  test_performance_benchmarks.py
tests/integration/: __init__.py  test_ai_orchestration.py  test_end_to_end_workflows.py  test_framework.py  test_frontend_backend_integration.py  test_multi_agent_coordination.py  test_orchestrator.py  test_performance_security.py  test_phase4_backend_integration.py  test_system_health.py  test_websocket_flow.py
tests/performance/: test_production_benchmarks.py  test_starri_performance.py
(+204 files in other folders)
